# twba.splitter

./: .gitignore  Cargo.toml  Dockerfile
.run/: Dockerfile.run.xml
src/: client.rs  errors.rs  main.rs  prelude.rs
src/client/: utils.rs
src/client/utils/: ffmpeg.rs
tests/data/: sample_output_playlist.m3u8
